--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@types/react-redux": "^7.1.34",
+    "@types/styled-components": "^5.1.34",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
